--- a/ui/package.json
+++ b/ui/package.json
@@ -8,7 +8,8 @@
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-beta.13"
+    "vue-router": "^4.0.0-beta.13",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.0",
